<resources>
    <string name="app_name">OakyPlanner</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="description">Description</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="place">Place</string>
    <string name="name_2">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="colon">:</string>
    <string name="weekdays">Weekdays</string>
    <string name="from_tpd_row">From</string>
    <string name="until_tpd_row">Until</string>
    <string name="description_tpd_row">Description</string>
    <string name="row_detail_menu_delete">Delete</string>
    <string name="row_menu_details_details">More details</string>
    <string name="input_edit_save_button">SAVE</string>
    <string name="remind_me_textView_input_edit">Remind me</string>
</resources>
